Small sidebar visibility fix

--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -315,9 +315,7 @@ form {
       background-color: #111; /* Black*/
       overflow-x: hidden; /* Disable horizontal scroll */
       padding-top: 20px; /* Place content 60px from the top */
-      transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
       box-shadow: 2px 2px 5px #999;
-      transition: 0.5s;
     }
 
     .sidebar-mini {
